added reset_all fix opera bug

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 </script>
             </div>
         </div>
+
+        <input type="button" name="clear_all" class="clear_all" value="очистить все">
+
     </div>
 </body> 
 </html> 
