chrome opera support

--- a/move_face.html
+++ b/move_face.html
@@ -34,7 +34,7 @@
         <div id="face">
             <div class="angle">0</div>
             <div id="angle_image"></div> 
-            <img src="temp/face.png" class="main" />
+            <img src="temp/face.png" width="150" height="180" class="main flipped" />
             <img src="temp/flip_icon.png" class="flip" />
         </div>
 
