--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
                     size: 6,// число должно быть четным
                     border_radius: 2,
                 },
+                // если заполнить, то по этим точкам построится область
+                dots: [
+                    [137, 133],
+                    [512, 129],
+                    [409, 359],
+
+                ],
             });
         });
     </script>
