--- a/move_face.html
+++ b/move_face.html
@@ -30,16 +30,23 @@
 
 </head> 
 <body>
-    <div id="maneken" style="width: 600px; height: 800px; background-image: url(temp/maneken.jpg)">
-        <div id="face">
-            <div class="angle">0</div>
-            <div id="angle_image"></div> 
-            <img src="temp/face.png" width="150" height="180" class="main flipped" />
+    <div id="maneken" style="width: 600px; height: 800px; position: absolute; left: 200px; top: 50px; border: 1px solid black">
+        <div id="face" >
+            <div id='test' style="border: 1px solid green">
+                <div class="rotate" style="position: absolute; text-align: center; 
+                    *width: 100%; *height: 100%;  z-index: 100; *background-color: red"><b>x</b></div>
+                <!--<div id="angle_image"></div> -->
+                <img src="" width="150" height="180" class="main" />
+            </div> 
             <img src="temp/flip_icon.png" class="flip" />
         </div>
 
 
     </div>
+
+    <div id="round" style="position: absolute; left: 900px; top: 200px">O</div>
+    <div style="position:absolute; left: 1300px; top: 500px">0</div>
+
 
 </body> 
 </html> 
