--- a/move_face.html
+++ b/move_face.html
@@ -31,11 +31,15 @@
 </head> 
 <body>
     <div id="maneken" style="width: 600px; height: 800px; position: absolute; left: 200px; top: 50px; border: 1px solid black">
+            <div class="rotate" style="position: absolute; text-align: center; 
+                width: 16px; height: 16px; left: 0px; top: 0px;  z-index: 100; *background-color: red"></div>
         <div id="face" >
-            <div id='test' style="border: 1px solid green">
-                <div class="rotate" style="position: absolute; text-align: center; 
-                    *width: 100%; *height: 100%;  z-index: 100; *background-color: red"><b>x</b></div>
-                <!--<div id="angle_image"></div> -->
+            <div id='test' style="border: 1px solid green; padding: 4px">
+                <div id="test2" style="width: 100%; position: absolute; top: -20px;  text-align: center"><b style="position: relative">
+                        0
+                </b></div>
+
+
                 <img src="" width="150" height="180" class="main" />
             </div> 
             <img src="temp/flip_icon.png" class="flip" />
