selectors in lasso to constructor

--- a/index.html
+++ b/index.html
@@ -42,11 +42,17 @@
                 },
                 // если заполнить, то по этим точкам построится область
                 dots: [
-                    [137, 133],
-                    [512, 129],
-                    [409, 359],
+                    //[137, 133],
+                    //[512, 129],
+                    //[409, 359],
 
                 ],
+                selectors: {
+                    lasso_area: '#lasso_area',
+                    dot: '.dot',
+                    start: '.dot.start'
+
+                }
             });
         });
     </script>
