preview fix. drag delay

--- a/upload-photo2.html
+++ b/upload-photo2.html
@@ -255,7 +255,7 @@
                                             backgroundColor: test,
                                         },
                                         css: {start: show_start_dot() },
-                                        event: {drag: drag, dblclick: remove }
+                                        event: {drag: drag, dblclick: remove, mouseup: mouseup }
                                         ">
                                     </div> 
                                 </script>
