--- a/upload-photo3.html
+++ b/upload-photo3.html
@@ -248,23 +248,35 @@
 						<section class="select sex">
 							<label for="select-maniken">Выберите маникен:</label>
 							<select name="select-maniken" id="select-maniken">
-								<option selected value="man|img/main/banners/big-2.jpg" >Мужской</option>
-								<option value="woman|img/main/banners/big-1.jpg">Женский</option>
+								<option selected value="man" >Мужской</option>
+								<option value="woman">Женский</option>
 							</select>
 						</section>
 						<section class="select color">
 							<label for="select-color">Выберите оттенок маникена:</label>
 							<ul id="maniken_colors">
-								<li class="active"><a href="#"><img src="img/main/banners/big-2.jpg" width="50" height="50" alt="" /></a></li>
-								<li><a href="#"><img src="img/main/banners/big-2.jpg" width="50" height="50" alt="" /></a></li>
-								<li><a href="#"><img src="img/main/banners/big-2.jpg" width="50" height="50" alt="" /></a></li>
-								<li class="lastinline"><a href="#"><img src="img/main/banners/big-2.jpg" width="50" height="50" alt="" /></a></li>
-								<li><a href="#"><img src="img/main/banners/big-2.jpg" width="50" height="50" alt="" /></a></li>
-								<li><a href="#"><img src="img/main/banners/big-2.jpg" width="50" height="50" alt="" /></a></li>
-								<li><a href="#"><img src="img/main/banners/big-2.jpg" width="50" height="50" alt="" /></a></li>
-								<li class="lastinline"><a href="#"><img src="img/main/banners/big-2.jpg" width="50" height="50" alt="" /></a></li>
-								<li><a href="#"><img src="img/main/banners/big-2.jpg" width="50" height="50" alt="" /></a></li>
-								<li><a href="#"><img src="img/main/banners/big-2.jpg" width="50" height="50" alt="" /></a></li>
+                                <!--man-->
+                                <li class="man active"><a href="img/temporary/man1.jpg"><img src="img/temporary/man1.jpg" width="50" height="50" alt="" /></a></li>
+								<li class="man"><a href="img/temporary/man8.jpg"><img src="img/temporary/man8.jpg" width="50" height="50" alt="" /></a></li>
+								<li class="man"><a href="img/temporary/man2.jpg"><img src="img/temporary/man2.jpg" width="50" height="50" alt="" /></a></li>
+								<li class="man lastinline"><a href="img/temporary/man3.jpg"><img src="img/temporary/man3.jpg" width="50" height="50" alt="" /></a></li>
+								<li class="man"><a href="img/temporary/man4.jpg"><img src="img/temporary/man4.jpg" width="50" height="50" alt="" /></a></li>
+								<li class="man"><a href="img/temporary/man5.jpg"><img src="img/temporary/man5.jpg" width="50" height="50" alt="" /></a></li>
+								<li class="man"><a href="img/temporary/man6.jpg"><img src="img/temporary/man6.jpg" width="50" height="50" alt="" /></a></li>
+								<li class="man lastinline"><a href="img/temporary/man7.jpg"><img src="img/temporary/man7.jpg" width="50" height="50" alt="" /></a></li>
+								<li class="man"><a href="img/temporary/man8.jpg"><img src="img/temporary/man8.jpg" width="50" height="50" alt="" /></a></li>
+								<li class="man"><a href="img/temporary/man9.jpg"><img src="img/temporary/man9.jpg" width="50" height="50" alt="" /></a></li>
+                                <!--womans-->
+								<li style="display: none" class="woman active"><a href="img/temporary/woman1.jpg"><img src="img/temporary/woman1.jpg" width="50" height="50" alt="" /></a></li>
+								<li style="display: none" class="woman"><a href="img/temporary/woman7.jpg"><img src="img/temporary/woman7.jpg" width="50" height="50" alt="" /></a></li>
+								<li style="display: none" class="woman"><a href="img/temporary/woman2.jpg"><img src="img/temporary/woman2.jpg" width="50" height="50" alt="" /></a></li>
+								<li style="display: none" class="woman lastinline"><a href="img/temporary/woman3.jpg"><img src="img/temporary/woman3.jpg" width="50" height="50" alt="" /></a></li>
+								<li style="display: none" class="woman"><a href="img/temporary/woman4.jpg"><img src="img/temporary/woman4.jpg" width="50" height="50" alt="" /></a></li>
+								<li style="display: none" class="woman"><a href="img/temporary/woman5.jpg"><img src="img/temporary/woman5.jpg" width="50" height="50" alt="" /></a></li>
+								<li style="display: none" class="woman"><a href="img/temporary/woman6.jpg"><img src="img/temporary/woman6.jpg" width="50" height="50" alt="" /></a></li>
+								<li style="display: none" class="woman lastinline"><a href="img/temporary/woman7.jpg"><img src="img/temporary/woman7.jpg" width="50" height="50" alt="" /></a></li>
+								<li style="display: none" class="woman"><a href="img/temporary/woman8.jpg"><img src="img/temporary/woman8.jpg" width="50" height="50" alt="" /></a></li>
+								<li style="display: none" class="woman"><a href="img/temporary/woman9.jpg"><img src="img/temporary/woman9.jpg" width="50" height="50" alt="" /></a></li>
 							</ul>
 						</section>		
 						<section class="select name">
